log
Thu 09 May 2024 09:33:17 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
952567e
Thu 09 May 2024 09:52:58 PM UTC: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   80 |     TreeNode *current = tree->current;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fa364d5
Thu 09 May 2024 09:53:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:24: error: invalid initializer
   80 |     TreeNode current = tree->current;
      |                        ^~~~
treemap.c:85:27: error: incompatible types when assigning to type ‘TreeNode’ from type ‘TreeNode *’
   85 |                 current = aux;
      |                           ^~~
treemap.c:90:27: error: incompatible types when assigning to type ‘TreeNode’ from type ‘TreeNode *’
   90 |                 current = aux;
      |                           ^~~
treemap.c:80:14: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   80 |     TreeNode current = tree->current;
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50883d8
Thu 09 May 2024 09:55:35 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
fc3b2b1
Thu 09 May 2024 09:56:54 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
039ff76
Thu 09 May 2024 10:03:34 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c680b5c
Thu 09 May 2024 10:09:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9939ffb
Thu 09 May 2024 10:10:50 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d65633e
Thu 09 May 2024 10:13:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
26c53f7
Thu 09 May 2024 10:14:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   80 |     TreeNode *current = tree->current;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5062702
Thu 09 May 2024 10:14:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
dd1d926
Thu 09 May 2024 10:21:41 PM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  4|7
total_score: 5/70
f3780ed
